Update homepage hero, add countdowntimer, add fonts
improve navbar translate for herosection by moving the code to Layout from nav and home components

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,8 @@
     position: relative;
     display: inline-block;
     text-decoration: none;
+    font-family: 'Staatliches', cursive;
+    font-family: 'Open Sans';
 }
 .link::after {
     content: "";
