--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,3 +49,92 @@
 .link.active::after {
     background: #f00;
 }
+.intro-section {
+    padding-top: var(--nav-height);
+}
+
+footer 
+{
+    background-color: rgb(39, 39, 39);
+    color:#FFFF;
+    padding:30px;
+    height:100%;
+
+
+    .link {
+        color: white;
+    }
+    .link::after {
+        background: white;
+    }
+}
+
+
+
+
+.quotes 
+{
+    color:#00FFFF;
+    font-weight: bold;
+}
+.footerContent 
+{
+    display: flex;
+    justify-content: space-around;
+}
+  
+.footerItems
+{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    font-size: 1rem;
+    justify-content: space-between;
+    gap:30px;
+    
+}
+
+
+
+.Registerbtn 
+{
+  padding:0.5rem;
+  border-radius: 0.3rem;
+  background-color: rgb(190, 3, 3);
+  color:white;
+  font-size: large;
+  margin-top: 10px;
+  border: none;
+
+}
+
+.SocialHandles
+{
+  display: flex;
+  padding:20px;
+  gap:30px;
+}
+
+.MainFooterContent
+{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+@media screen  and (max-width:900px) {
+    .footerContent 
+    {
+        flex-direction: column;
+    }
+}
+
+// @media screen  and (max-width:900px) {
+//     .footerItems
+//     {
+//         flex-direction: column;
+//     }
+// }
