--- a/src/layouts/Navigation.module.scss
+++ b/src/layouts/Navigation.module.scss
@@ -5,12 +5,20 @@
     position: fixed;
     left: 0;
     width: 100%;
-    padding: 0 1.8rem;
+    padding: 0 1.2rem;
     top: 0;
     z-index: 100;
 
     .logo {
         flex-grow: 1;
+        a {
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.2rem;
+            letter-spacing: 0.3ch;
+            text-decoration: none;
+            color: black;
+        }
+
     }
 
     .router-links {
