--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
 :root {
-    --white2: #d8d8d8;
     --nav-height: 4.1425rem;
+    
+    // colors
+    --white1: #eee;
+    --white2: #d8d8d8;
+    --primary: #974B60;
 }
 
 * {
@@ -9,10 +13,29 @@
     box-sizing: border-box;
 }
 
+html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+::selection {
+    color: #000;
+    background-color: #c7c6c6cc;
+}
+
 .container {
     padding-left: 1.2rem;
     padding-right: 1.2rem;
     margin: auto;
+
+    @media screen and (max-width: 700px) {
+        padding-left: 0.8rem;
+        padding-right: 0.8rem;        
+    }
 }
 
 .__layout {
@@ -21,6 +44,7 @@
 
 .page {
     position: relative;
+    background-color: var(--white1);
 }
 
 .link {
@@ -59,8 +83,70 @@
     background: #f00;
 }
 
-.intro-section {
-    padding-top: var(--nav-height);
+.btn {
+    position: relative;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: .625rem;
+    border-radius: .5rem;
+    font-weight: 700;
+    text-align: left;
+    transition: border-radius .2s cubic-bezier(0.215, 0.61, 0.355, 1);
+    overflow: hidden;
+    transition: color .2s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
+    width: 100%;
+    height: 100%;
+
+    text-decoration: none;
+    line-height: 0.95;
+    font-family: 'Open Sans', sans-serif;
+
+    background-color: #974b5e;
+    color: #fff;
+
+    .btn-text, .btn-subtitle {
+        z-index: 2;
+    }
+
+
+    .btn-text {
+        font-weight: 600;
+        font-size: 1.5rem;
+        padding-right: 2rem;
+    }
+
+    .btn-subtitle {
+        font-weight: 500;
+        font-size: 0.75rem;
+    }
+    
+    > svg {
+        width: 1.5rem;
+        height: 1.5rem;
+        position: absolute;
+        bottom: .625rem;
+        right: .625rem;
+        z-index: 2;
+        fill: #fff;
+    }
+}
+.btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    transform: translate3d(0, 101%, 0);
+    transform-origin: top left;
+    transition: transform .2s cubic-bezier(0.215, 0.61, 0.355, 1);
+    z-index: 0;
+}
+.btn:hover::before {
+    transform: translate3d(0, 0, 0);
 }
 
 footer {
