--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -301,3 +301,36 @@
   {
     font-family: Neuemetana,sans-serif ;
   }
+
+  .login-msg {
+    display: flex;
+    align-items: center;
+    padding: 0.8rem 1rem;
+    font-size: 0.875rem;
+    margin: 1rem auto 2rem;
+    border-radius: 4px;
+    font-family: "Open Sans", sans-serif;
+    box-shadow: 0px 1px 3px -2px #000000e6;
+
+    .icon {
+        display: flex;
+        color: inherit;
+        margin-right: 0.8rem;
+
+        svg {
+            width: 1.375rem;
+            height: 1.375rem;
+            fill: currentColor;
+        }
+    }
+}
+
+  .login-msg.success {
+      color: #2e7d32;
+      background-color: rgb(237, 247, 237);
+  }
+
+  .login-msg.error {
+      color: #d32f2f;
+      background-color: rgb(253, 237, 237);
+  }
