--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,8 @@
 // ----- All sections ----- COMMON
 .home-section {
-    padding-top: 4rem;
-    padding-bottom: 6rem;
+    padding-top: 6rem;
+    padding-bottom: 8rem;
+    min-height: 100vh;
     --heading-font-size: 16vw;
     overflow-x: hidden;
 
