--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -114,7 +114,7 @@
 
     .event-list-wrapper {
         position: relative;
-        overflow: hidden;
+        overflow: visible;
 
         .event-list {
             list-style-type: none;
@@ -198,7 +198,8 @@
                 bottom: 0;
                 width: var(--card-width);
                 height: 0;
-                transition: 0.15s ease-out height;
+                opacity: 0;
+                transition: 0.25s ease-out height, 0.5s ease-in-out opacity;
 
                 .img-wrapper {
                     position: absolute;
@@ -221,6 +222,7 @@
             }
             .current-figure.active {
                 height: var(--card-width);
+                opacity: 1;
             }
         }
     }
