--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -74,7 +74,7 @@
                     text-align: center;
                     color: black;
                     background-color: white;
-                    line-height: 1;
+                    line-height: 1.2;
 
                     width: 100%;
                     height: 100%;
@@ -86,6 +86,11 @@
                 .tab-btn:hover {
                     cursor: pointer;
                     color: var(--primary);
+                }
+                @media screen and (max-width: 699px) {
+                    .tab-btn {
+                        font-size: 8vw;
+                    }
                 }
             }
 
@@ -102,12 +107,6 @@
             .tab.active>.tab-btn {
                 background-color: #1C1C1C;
                 color: white;
-            }
-
-            @media screen and (max-width: 699px) {
-                .tab {
-                    font-size: 8vw;
-                }
             }
         }
     }
